--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -120,6 +120,19 @@
             </div>
 
             <div class="form-group">
+                <label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+                                ng-model="DocumentObject.ExchangeRate"></input>
+                        <span class="input-group-addon">
+                            <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate">
+                        </span>		
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocDesp" translate="Common.Description">Desp</label>
                 <div class="col-sm-10">
                     <input type="text" id="iptDocDesp" class="form-control" 
