--- a/app/views/financedocument_currexg.html
+++ b/app/views/financedocument_currexg.html
@@ -43,14 +43,14 @@
                     <ui-select-choices repeat="acur in AllCurrencies">
                         <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                         <small>
-                            ID: {{acur.Currency}} <br />
-                            Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
+                            {{'Common.ID' | translate}}: {{acur.Currency}} <br />
+                            {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                         </small>
                     </ui-select-choices>
                 </ui-select>
             </div>
         </div>
-            
+
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
 			<div class="col-sm-10">
@@ -72,8 +72,8 @@
                     <ui-select-choices repeat="acur in AllCurrencies">
                         <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                         <small>
-                            ID: {{acur.Currency}} <br />
-                            Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
+                            {{'Common.ID' | translate}}: {{acur.Currency}} <br />
+                            {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                         </small>
                     </ui-select-choices>
                 </ui-select>
@@ -111,8 +111,8 @@
                         <ui-select-choices repeat="allacnt in AllAccounts">
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{allacnt.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -127,8 +127,8 @@
                         <ui-select-choices repeat="scc in AllControlCenters">
                             <div ng-bind-html="scc.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{scc.ID}} <br />
-                                Name: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{scc.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -143,8 +143,8 @@
                         <ui-select-choices repeat="sord in AllOrders">
                             <div ng-bind-html="sord.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{sord.ID}} <br />
-                                Name: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{sord.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -169,8 +169,8 @@
                         <ui-select-choices repeat="allacnt in AllAccounts">
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{allacnt.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -185,8 +185,8 @@
                         <ui-select-choices repeat="cc in AllControlCenters">
                             <div ng-bind-html="cc.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{cc.ID}} <br />
-                                Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{cc.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -201,8 +201,8 @@
                         <ui-select-choices repeat="ord in AllOrders">
                             <div ng-bind-html="ord.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{ord.ID}} <br />
-                                Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{ord.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
