--- a/app/views/financedocument_tran.html
+++ b/app/views/financedocument_tran.html
@@ -33,13 +33,26 @@
                     <ui-select-choices repeat="acur in AllCurrencies">
                         <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                         <small>
-                            ID: {{acur.Currency}} <br />
-                            Name: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
+                            {{'Common.ID' | translate}}: {{acur.Currency}} <br />
+                            {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                         </small>
                     </ui-select-choices>
                 </ui-select>
             </div>
         </div>
+
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+			<div class="col-sm-10">
+                <div class="input-group">
+                    <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+                            ng-model="DocumentObject.ExchangeRate"></input>
+                    <span class="input-group-addon">
+                        <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate">
+                    </span>		
+                </div>
+        	</div>
+		</div>
 
         <div class="form-group">
             <label class="control-label col-sm-2" for="iptAmt" translate="Finance.Amount">Amount:</label>
@@ -57,6 +70,7 @@
 			</div>
 		</div>
         
+        <!-- Source part -->
         <div class="col-lg-6">
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.SourceAccount">Src Account:</label>
@@ -66,8 +80,8 @@
                         <ui-select-choices repeat="allacnt in AllAccounts">
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{allacnt.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -82,8 +96,8 @@
                         <ui-select-choices repeat="scc in AllControlCenters">
                             <div ng-bind-html="scc.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{scc.ID}} <br />
-                                Name: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{scc.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+scc.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -98,8 +112,8 @@
                         <ui-select-choices repeat="sord in AllOrders">
                             <div ng-bind-html="sord.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{sord.ID}} <br />
-                                Name: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{sord.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+sord.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -107,6 +121,7 @@
             </div>
         </div>
 
+        <!-- Target part -->
         <div class="col-lg-6">
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.TargetAccount">Tgt Account:</label>
@@ -116,8 +131,8 @@
                         <ui-select-choices repeat="allacnt in AllAccounts">
                             <div ng-bind-html="allacnt.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{allacnt.ID}} <br />
-                                Name: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{allacnt.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+allacnt.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -132,8 +147,8 @@
                         <ui-select-choices repeat="cc in AllControlCenters">
                             <div ng-bind-html="cc.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{cc.ID}} <br />
-                                Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{cc.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -148,8 +163,8 @@
                         <ui-select-choices repeat="ord in AllOrders">
                             <div ng-bind-html="ord.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{ord.ID}} <br />
-                                Name: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{ord.ID}} <br />
+                                {{'Common.Name' | translate}}: <span ng-bind-html="''+ord.Name | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
