Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -195,7 +195,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptItemAmt" translate="Finance.Amount">Amount:</label>
                     <div class="col-sm-10">
-                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.TranAmount"></input>
+                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.TranAmount_Org"></input>
                     </div>
                 </div>
                 
