Continues the development.

--- a/app/views/financecurrencylist.html
+++ b/app/views/financecurrencylist.html
@@ -12,6 +12,7 @@
 				<th translate="Finance.Currency">Currency</th>
 				<th translate="Common.Name">Name</th>
 				<th translate="Finance.CurrencySymbol">Symbol</th>
+				<th translate="Finance.LocalCurrency">Local Currency</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -19,6 +20,7 @@
 				<td>{{row.Currency}}</td>
 				<td>{{row.Name}}</td>
 				<td>{{row.Symbol}}</td>
+				<td>{{row.IsLocalCurrency}}</td>
 			</tr>
 		</tbody>
 	</table>
