--- a/app/views/home.html
+++ b/app/views/home.html
@@ -181,19 +181,21 @@
 								<li><a target="_blank" href="https://github.com/thomaspark/bootswatch/">bootswatch</a></li>
 								<li><a target="_blank" href="https://angular-translate.github.io/">Angular Translate</a></li>
 								<li><a target="_blank" href="http://www.chartjs.org/">Chart.js</a></li>
+								<li><a target="_blank" href="http://brianreavis.github.io/selectize.js/">selectize.js</a></li>
+								<li><a target="_blank" href="https://github.com/machineboy2045/angular-selectize">angular-selectize</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">Angular UI</li>
 								<li><a target="_blank" href="http://angular-ui.github.io/">Angular UI</a></li>
 								<li><a target="_blank" href="http://angular-ui.github.io/bootstrap/">UI-Bootstrap</a></li>
 								<li><a target="_blank" href="http://angular-ui.github.io/ui-router/">UI-Router</a></li>
 								<li><a target="_blank" href="https://github.com/angular-ui/ui-tinymce">UI-tinymce</a></li>
-								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
 								<li><a target="_blank" href="http://ui-grid.info/">UI-Grid</a></li>
 								<li><a target="_blank" href="http://jtblin.github.io/angular-chart.js/">Angular Chart</a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header">CDNs</li>
 								<li><a target="_blank" href="http://www.bootcdn.cn/">BootCDN</a></li>
 								<li role="separator" class="divider"></li>
+								<li><a target="_blank" href="https://github.com/angular-ui/ui-select">UI-Select</a></li>
 								<li><a target="_blank" href="https://github.com/lorenzofox3/Smart-Table">Smart-Table</a></li>
 								<li><a target="_blank" href="http://cdn.code.baidu.com/">Baidu CDN</a></li>
 	                        </ul>
