--- a/app/views/financedocument.html
+++ b/app/views/financedocument.html
@@ -37,15 +37,15 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.DocumentType">Doc. Type:</label>
+                <label class="control-label col-sm-2" translate="Finance.Docu mentType">Doc. Type:</label>
                 <div class="col-sm-10">
                     <ui-select ng-model="DocumentObject.DocTypeObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                         <ui-select-match placeholder="Select a document type via the name...">{{$select.selected.Name}}</ui-select-match>
                         <ui-select-choices repeat="doctype in AllDocumentTypes">
                             <div ng-bind-html="doctype.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{doctype.ID}} <br />
-                                Comment: <span ng-bind-html="''+doctype.Comment | highlight: $select.search"></span>
+                                {{'Common.ID' | translate}}: {{doctype.ID}} <br />
+                                {{'Common.Comment' | translate}}: <span ng-bind-html="''+doctype.Comment | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
@@ -55,16 +55,29 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Finance.Currency">Currency:</label>
                 <div class="col-sm-10">
-                    <ui-select ng-model="DocumentObject.TranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
+                    <ui-select ng-model="DocumentTranCurrencyObject" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                        <ui-select-match placeholder="Select a currency via the name...">{{$select.Name}}</ui-select-match>
                         <ui-select-choices repeat="acur in AllCurrencies">
                             <div ng-bind-html="acur.Name | highlight: $select.search"></div>
                             <small>
-                                ID: {{acur.Currency}} <br />
+                                {{'Common.ID' | translate}}: {{acur.Currency}} <br />
                                 Symbol: <span ng-bind-html="''+acur.Symbol | highlight: $select.search"></span>
                             </small>
                         </ui-select-choices>
                     </ui-select>
+                </div>
+            </div>
+            
+            <div class="form-group" ng-hide="DocumentTranCurrencyObject && DocumentTranCurrencyObject.IsLocalCurrency">
+                <label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+                <div class="col-sm-10">
+                    <div class="input-group">
+                        <input type="text" ng-disabled="isReadonly" id="iptExgRate" required class="form-control"
+                                ng-model="DocumentObject.ExchangeRate"></input>
+                        <span class="input-group-addon">
+                            <input type="checkbox" ng-disabled="isReadonly" ng-model="DocumentObject.ProposedExchangeRate">
+                        </span>		
+                    </div>
                 </div>
             </div>
 
@@ -83,55 +96,10 @@
                 <label class="control-label col-sm-2" for="iptDocAmount" translate="Finance.Amount">Amount</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="iptDocAmount" readonly
-                           placeholder="Amount" ng-model="DocumentObject.TranAmount" required>
+                           placeholder="{{'Finance.Amount' | translate}}" ng-model="DocumentObject.TranAmount" required>
                 </div>
             </div>
             
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.ExchangeRate">Exchange Rate</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptExgRate" readonly
-                           placeholder="Exchange Rate" ng-model="DocumentObject.ExchangeRate" required>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.ProposedExchangeRate">Proposed Exchange Rate</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="iptExgRate" readonly
-                           placeholder="Exchange Rate" ng-model="DocumentObject.ProposedExchangeRate" required>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" translate="Finance.CurrencyExchangeDocument">Currency Exchange:</label>
-                <div class="col-sm-10">
-                    <ui-select ng-model="RefCurrExgDocObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                        <ui-select-match placeholder="Select a document via the desp...">{{$select.selected.Desp}}</ui-select-match>
-                        <ui-select-choices repeat="adoc in arFinanceCurrencyExchangeDocument">
-                            <div ng-bind-html="adoc.DocID | highlight: $select.search"></div>
-                            <small>
-                                ID: {{adoc.DocID}} <br />
-                                Desp: <span ng-bind-html="''+adoc.Desp | highlight: $select.search"></span>
-                            </small>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
-                <div class="col-sm-10">
-                    <div class="input-group">
-                        <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
-                                ng-model="DocumentObject.ExchangeRate"></input>
-                        <span class="input-group-addon">
-                            <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate">
-                        </span>		
-                    </div>
-                </div>
-            </div>
-
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocDesp" translate="Common.Description">Desp</label>
                 <div class="col-sm-10">
