--- a/app/views/finance/financedocument_currexg.html
+++ b/app/views/finance/financedocument_currexg.html
@@ -38,7 +38,9 @@
         <div class="form-group">
             <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
             <div class="col-sm-10">
-                <ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
+                <selectize placeholder='Pick source currency...' options='sourceCurrOptions' config="sourceCurrConfig" ng-model="SourceCurrency" 
+                    required='true'></selectize>
+                <!--<ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                     <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
                     <ui-select-choices repeat="acur in AllCurrencies">
                         <div ng-bind-html="acur.Name | highlight: $select.search"></div>
@@ -47,7 +49,7 @@
                             {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
                         </small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select>-->
             </div>
         </div>
 
