--- a/app/views/finance/financedocument_currexg.html
+++ b/app/views/finance/financedocument_currexg.html
@@ -39,7 +39,7 @@
             <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
             <div class="col-sm-10">
                 <selectize placeholder='Pick source currency...' options='sourceCurrOptions' config="sourceCurrConfig" ng-model="SourceCurrency" 
-                    required='true'></selectize>
+                    required></selectize>
                 <!--<ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
                     <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
                     <ui-select-choices repeat="acur in AllCurrencies">
