--- a/app/views/finance/financedocument_currexg.html
+++ b/app/views/finance/financedocument_currexg.html
@@ -38,22 +38,12 @@
         <div class="form-group">
             <label class="control-label col-sm-2" translate="Finance.SourceCurrency">Source Currency:</label>
             <div class="col-sm-10">
-                <selectize placeholder='Pick source currency...' options='sourceCurrOptions' config="sourceCurrConfig" ng-model="SourceCurrency" 
+                <selectize placeholder='Pick source currency...' options='arCurrency' config="sourceCurrConfig" ng-model="DocumentObject.TranCurrency" 
                     required></selectize>
-                <!--<ui-select ng-model="SourceTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="acur in AllCurrencies">
-                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                        <small>
-                            {{'Common.ID' | translate}}: {{acur.Currency}} <br />
-                            {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>-->
             </div>
         </div>
 
-		<div class="form-group">
+		<div id="row_sourcecurr_rate" class="form-group animate-show" ng-show="SourceCurrencyNotLocalCurrency">
 			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
 			<div class="col-sm-10">
                 <div class="input-group">
@@ -69,24 +59,16 @@
         <div class="form-group">
             <label class="control-label col-sm-2" translate="Finance.TargetCurrency">Target Currency:</label>
             <div class="col-sm-10">
-                <ui-select ng-model="TargetTranCurrencyObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                    <ui-select-match placeholder="Select a currency via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="acur in AllCurrencies">
-                        <div ng-bind-html="acur.Name | highlight: $select.search"></div>
-                        <small>
-                            {{'Common.ID' | translate}}: {{acur.Currency}} <br />
-                            {{'Common.Name' | translate}}: <span ng-bind-html="''+acur.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
+                <selectize placeholder='Pick target currency...' options='arCurrency' config="targetCurrConfig" ng-model="DocumentObject.TranCurrency2" 
+                            required></selectize>
             </div>
         </div>
 
-		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptExgRate" translate="Finance.ExchangeRate">Exg. rate</label>
+		<div id="row_targetcurr_rate" class="form-group animate-show" ng-show="TargetCurrencyNotLocalCurrency">
+			<label class="control-label col-sm-2" for="iptExgRate2" translate="Finance.ExchangeRate">Exg. rate</label>
 			<div class="col-sm-10">
                 <div class="input-group">
-                    <input type="text" ng-readonly="isReadonly" id="iptExgRate" required class="form-control"
+                    <input type="text" ng-readonly="isReadonly" id="iptExgRate2" required class="form-control"
                             ng-model="DocumentObject.ExchangeRate2"></input>
                     <span class="input-group-addon">
                         <input type="checkbox" ng-readonly="isReadonly" ng-model="DocumentObject.ProposedExchangeRate2">
